# pg-repl-cdc

./: Dockerfile  LICENSE  README.md  build.sh  job.pgbench-run.yaml  job.python-cdc-capture.yaml  sts.pg.yaml  svc.minio.yaml
manifests/: job.pgbench-init.yaml  job.python-cdc-capture.yaml  kustomization.yaml  secret.minio-creds.yaml  secret.pg-creds.yaml  sts.minio.yaml
python-cdc-capture/: pyproject.toml
python-cdc-capture/python_cdc_capture/: __init__.py
python-cdc-capture/python_cdc_capture/pypgoutput/: __init__.py  decoders.py  reader.py  utils.py
